Source/ThirdParty/ANGLE/src/libANGLE/Device.cpp
@@ -38,10 +38,10 @@ static std::string GenerateExtensionsString(const T &extensions)
 typedef std::set<egl::Device *> DeviceSet;
 static DeviceSet *GetDeviceSet()
 {
-#pragma GCC diagnostic push
-#pragma GCC diagnostic ignored "-Wexit-time-destructors"
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wexit-time-destructors"
     static DeviceSet devices;
-#pragma GCC diagnostic pop
+#pragma clang diagnostic pop
     return &devices;
 }
 
