Source/ThirdParty/ANGLE/src/libANGLE/Display.cpp
@@ -90,30 +90,30 @@ typedef std::map<EGLNativeWindowType, Surface*> WindowSurfaceMap;
 // associated with it.
 static WindowSurfaceMap *GetWindowSurfaces()
 {
-#pragma GCC diagnostic push
-#pragma GCC diagnostic ignored "-Wexit-time-destructors"
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wexit-time-destructors"
     static WindowSurfaceMap windowSurfaces;
-#pragma GCC diagnostic pop
+#pragma clang diagnostic pop
     return &windowSurfaces;
 }
 
 typedef std::map<EGLNativeDisplayType, Display *> ANGLEPlatformDisplayMap;
 static ANGLEPlatformDisplayMap *GetANGLEPlatformDisplayMap()
 {
-#pragma GCC diagnostic push
-#pragma GCC diagnostic ignored "-Wexit-time-destructors"
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wexit-time-destructors"
     static ANGLEPlatformDisplayMap displays;
-#pragma GCC diagnostic pop
+#pragma clang diagnostic pop
     return &displays;
 }
 
 typedef std::map<Device *, Display *> DevicePlatformDisplayMap;
 static DevicePlatformDisplayMap *GetDevicePlatformDisplayMap()
 {
-#pragma GCC diagnostic push
-#pragma GCC diagnostic ignored "-Wexit-time-destructors"
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wexit-time-destructors"
     static DevicePlatformDisplayMap displays;
-#pragma GCC diagnostic pop
+#pragma clang diagnostic pop
     return &displays;
 }
 
@@ -930,10 +930,10 @@ const ClientExtensions &Display::getClientExtensions()
 
 const std::string &Display::getClientExtensionString()
 {
-#pragma GCC diagnostic push
-#pragma GCC diagnostic ignored "-Wexit-time-destructors"
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wexit-time-destructors"
     static const std::string clientExtensionsString = GenerateExtensionsString(getClientExtensions());
-#pragma GCC diagnostic pop
+#pragma clang diagnostic pop
     return clientExtensionsString;
 }
 
